--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 	<div class="balloons text-center" id="b3">
     	<h2 style="color:#D14D39;">D</h2>
     </div>
+	<div class="balloons text-center" id="b2">
+    	<h2 style="color:#0719D4;">P</h2>
+    </div>
+	<div class="balloons text-center" id="b3">
+    	<h2 style="color:#D14D39;">M</h2>
+    </div>
 	<div class="balloons text-center" id="b4">
     	<h2 style="color:#8FAD00;">K</h2>
     </div>
