--- a/index.html
+++ b/index.html
@@ -110,26 +110,27 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Chúc xiều...</p>
+				<p>Anh chúc e</p>
 				<p>Sinh nhật vui vẻ</p>
 				<p>Tuổi mới...</p>
 				<p>Nhiều sức khỏe</p>
 				<p>Học hành thiệt giỏi</p>
 				<p>Kiệm thiệt nhiều tiền</p>
 				<p>Đạt được ước mơ</p>
-				<p>Sớm lấy được chông đại gia kk</p>
-				<p><strong>Happy birthday!!!</p>
+				<p>Sớm làm vợ anh</p>
+				<p>Mãi là người con gái của đời anh</p>
+				<p><strong>Thanh Thái '(Thái Liên Minh)' kk</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Ấn đây nì</button>
+					<button class="btn btn-primary" id="turn_on">Click me</button>
 					<button class="btn btn-primary" id="play">Tiếp...</button>
 					<button class="btn btn-primary" id="bannar_coming">Tiếp đi...</button>
-					<button class="btn btn-primary" id="balloons_flying">Tiếp nựa</button>
-					<button class="btn btn-primary" id="cake_fadein">Nựa</button>
-					<button class="btn btn-primary" id="light_candle">Nựa tề</button>
+					<button class="btn btn-primary" id="balloons_flying">Tiếp nữa</button>
+					<button class="btn btn-primary" id="cake_fadein">Nữa</button>
+					<button class="btn btn-primary" id="light_candle">Nữa kìa</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
 					<button class="btn btn-primary" id="story">Tiếp</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
