--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="loading"></div>
 	<audio class="song" controls loop>
         <source src="hbd.mp3"></source>
-	   Your browser isn't invited for super fun audio time.
+	   Không bật được nhạc rồi!
     </audio>
     <div class="balloons text-center" id="b1">
     	<h2 style="color:#F2B300;">H</h2>
@@ -45,16 +45,13 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#0719D4;">P</h2>
+    	<h2 style="color:#0719D4;">D</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#D14D39;">M</h2>
+    	<h2 style="color:#D14D39;">K</h2>
     </div>
 	<div class="balloons text-center" id="b6">
-    	<h2 style="color:#8FAD00;">K</h2>
-    </div>
-	<div class="balloons text-center" id="b7">
-    	<h2 style="color:#8377E4;">T</h2>
+    	<h2 style="color:#8FAD00;">L</h2>
     </div>
     <!-- <div class="balloons text-center" id="b6">
     	<h2 style="color:#99C96A;">L</h2>
@@ -110,16 +107,16 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Anh chúc e</p>
+				<p>Choa</p>
+				<p>Chúc sại</p>
 				<p>Sinh nhật vui vẻ</p>
 				<p>Tuổi mới...</p>
 				<p>Nhiều sức khỏe</p>
 				<p>Học hành thiệt giỏi</p>
 				<p>Kiệm thiệt nhiều tiền</p>
 				<p>Đạt được ước mơ</p>
-				<p>Sớm làm vợ anh</p>
-				<p>Mãi là người con gái của đời anh</p>
-				<p><strong>Thanh Thái '(Thái Liên Minh)' kk</p>
+				<p>Luôn luôn xinh đẹp</p>
+				<p><strong>HPBD</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
